Use default color with higher contrast. (Fix #15)

--- a/asset/sass/_base.scss
+++ b/asset/sass/_base.scss
@@ -16,4 +16,4 @@ $spacing-l: $base-line-height;
 $light: rgba(0,0,0,.08);
 $gray: #eee;
 $bold: rgba(0,0,0,.15);
-$accent: #089494;
+$accent: #087b94;
